--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -1,22 +1,19 @@
+
+
 .App {
   text-align: center;
+  background-color: aliceblue;
+
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.FormField__Button {
+  background-color: cornflowerblue;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 15px 70px;
+  font-size: .8em;
+  font-weight: 500;
+  font-style: italic;
+  text-decoration-color: black;
 }
