Changed API and CSS

--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -3,17 +3,18 @@
 .App {
   text-align: center;
   background-color: aliceblue;
-
 }
 
 .FormField__Button {
   background-color: cornflowerblue;
-  border: none;
-  outline: none;
   border-radius: 25px;
   padding: 15px 70px;
   font-size: .8em;
   font-weight: 500;
   font-style: italic;
-  text-decoration-color: black;
+}
+
+.twitter{
+  background-color: white;
+  text-align: start;
 }
